[build-system]
requires = ["setuptools >= 67.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lnmc"
description = "Allows to create symbolic link in batches from a YAML file and consolidate them in a specific directory."
authors = [{name = "Daniel Luque", email = "danielluque14@gmail.com"}]
readme = "README.md"
license = {text = "AGPLv3+"}
keywords = ["linux", "windows", "devops", "sysadmin", "batches", "symlink", "command-line-tool", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "Click >=8.0.4,<9.0.0",
    "PyYAML >=6.0.0,<7.0.0"
]
dynamic = ["version"]

[project.urls]
"Source Code"  = "https://github.com/LuqueDaniel/lnmc"
"Issue Tracker" = "https://github.com/LuqueDaniel/lnmc/issues"
Documentation = "https://github.com/LuqueDaniel/lnmc/blob/master/README.md"

[project.optional-dependencies]
dev = [
    "pre-commit >=2.20.0",
    "black >=22.10",
    "isort >=5.11.5,<5.12.0",  # 5.12.0+ requires Python 3.8+
    "ruff >=0.0.259",
    "mypy >=0.982",
    "pytest >=7.2.0,<8.0.0",
    "pytest-cov >=4.0.0",
    "types-setuptools ==68.0.0.0",
    "types-PyYAML >=6.0.0",
]

[project.scripts]
lnmc = "lnmc:lnmc"

[tool.setuptools]
py-modules = ["lnmc"]
dynamic = {version = {attr = "lnmc.__version__"}}

[tool.black]
target-version = ["py37"]

[tool.isort]
profile = "black"
known_third_party = ["click", "pytest", "setuptools", "yaml"]

[tool.pytest.ini_options]
addopts = "-vvs --cov=lnmc"

[tool.ruff]
target-version = "py37"
src = ["."]
fix = false
line-length = 88  # its default
select = ["F", "E", "W", "C", "B", "N"]

[tool.mypy]
strict = true
