[metadata]
name = lnmc
version = 1.3.0
url = https://github.com/LuqueDaniel/lnmc
license = AGPLv3+
license_files = LICENSE
description = Allows to create symbolic link in batches from a YAML file and consolidate them in a specific directory.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Daniel Luque
author_email = danielluque14@gmail.com
keywords = linux, windows, devops, command, sysadmin, batches, symlink, command-line-tool
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration
    Topic :: Utilities
    Topic :: System :: Shells
platforms = any
project_urls =
    Source Code = https://github.com/LuqueDaniel/lnmc
    Issue Tracker = https://github.com/LuqueDaniel/lnmc/issues
    Documentation = https://github.com/LuqueDaniel/lnmc/blob/master/README.md

[options]
py_modules = lnmc
python_requires = >= 3.7
install_requires =
    Click >= 8.0
    PyYAML > 5.4

[options.extras_require]
test =
    pytest
    pytest-cov
dev =
    pylint
    mypy
    black
    isort
    pre-commit
    %(test)s

[options.entry_points]
console_scripts =
    lnmc = lnmc:lnmc
